# vfs-shell

./: .gitmodules  .woodpecker.yml  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Shell/: ArgParser.hpp  Environment.cpp  Environment.hpp  EscapeSeqParser.cpp  EscapeSeqParser.hpp  Evaluator.hpp  Initializer.hpp  LineParser.cpp  LineParser.hpp  MockTimeProvider.hpp  Script.hpp  ScriptHeaders.cpp  ScriptHeaders.hpp  SerialTerminal.cpp  SerialTerminal.hpp  Settings.hpp  ShellHelpers.cpp  ShellHelpers.hpp  ShellScript.hpp  Terminal.cpp  Terminal.hpp  TerminalHelpers.hpp  TerminalProxy.cpp  TerminalProxy.hpp  TimeProvider.hpp
Core/Shell/Interfaces/: DisplayParameters.hpp  InterfaceNode.hpp  InterfaceParameters.hpp  InterfaceProxy.cpp  InterfaceProxy.hpp  SerialParameters.hpp
Core/Shell/Scripts/: ChangeDirectoryScript.cpp  ChangeDirectoryScript.hpp  ChangeModeScript.cpp  ChangeModeScript.hpp  ChecksumCrc32Script.hpp  CopyNodeScript.hpp  DataReader.cpp  DataReader.hpp  DateScript.cpp  DateScript.hpp  DirectDataScript.hpp  DisplayTestScript.hpp  EchoScript.cpp  EchoScript.hpp  ExitScript.cpp  ExitScript.hpp  GetEnvScript.hpp  HelpScript.cpp  HelpScript.hpp  ListEnvScript.hpp  ListNodesScript.cpp  ListNodesScript.hpp  MakeDirectoryScript.cpp  MakeDirectoryScript.hpp  MountScript.hpp  MountScriptBase.cpp  MountScriptBase.hpp  PrintDataScript.hpp  PrintHexDataScript.hpp  PrintRawDataScript.hpp  RemoveNodesScript.cpp  RemoveNodesScript.hpp  SetEnvScript.hpp  Shell.cpp  Shell.hpp  TimeScript.cpp  TimeScript.hpp
Core/Vfs/: Vfs.cpp  Vfs.hpp  VfsDataNode.cpp  VfsDataNode.hpp  VfsDirectory.cpp  VfsDirectory.hpp  VfsHandle.cpp  VfsHandle.hpp  VfsMountpoint.cpp  VfsMountpoint.hpp
Core/Wrappers/: Mutex.hpp  Semaphore.hpp  Thread.hpp
Libs/: CMakeLists.txt
Platform/: CMakeLists.txt
Platform/LPC17xx_DevKit/: CMakeLists.txt  CardBuilder.cpp  CardBuilder.hpp  Halm.config  InterfaceWrapper.cpp  InterfaceWrapper.hpp  Main.cpp  Memory.ld  RealTimeClock.cpp  RealTimeClock.hpp  Stubs.cpp
Platform/LPC17xx_DevKit/Nodes/: CpuFrequencyScript.hpp  DacNode.hpp  MakePinScript.hpp  MountScript.hpp  PinNode.hpp  ShutdownScript.hpp
Platform/LPC17xx_DevKit/Scripts/: CpuFrequencyScript.hpp  MakeDacScript.hpp  MakePinScript.hpp  MountScript.hpp  RtcUtilScript.hpp  ShutdownScript.hpp
Platform/Linux/: CMakeLists.txt  Halm.config  Main.cpp  MmfBuilder.cpp  MmfBuilder.hpp  MountScript.hpp  UnixTimeProvider.cpp  UnixTimeProvider.hpp
Platform/Targets/: cortex-m.cmake  linux.cmake
Tests/: CMakeLists.txt
Tests/ArgParser/: Main.cpp
Tests/ChangeDirectory/: Main.cpp
Tests/ChangeMode/: Main.cpp
Tests/ChecksumCrc32/: Main.cpp
Tests/CommandShell/: Main.cpp
Tests/CopyNode/: Main.cpp
Tests/Date/: Main.cpp
Tests/DirectData/: Main.cpp
Tests/Echo/: Main.cpp
Tests/Env/: Main.cpp
Tests/EnvCommands/: Main.cpp
Tests/Help/: Main.cpp
Tests/InterfaceNode/: Main.cpp  MockDisplay.cpp  MockDisplay.hpp  MockInterface.cpp  MockInterface.hpp  MockSerial.cpp  MockSerial.hpp
Tests/LineParser/: Main.cpp
Tests/ListNodes/: Main.cpp
Tests/MakeDirectory/: Main.cpp
Tests/Mount/: Main.cpp
Tests/MountFailures/: Main.cpp
Tests/PrintHexData/: Main.cpp
Tests/PrintRawData/: Main.cpp
Tests/RemoveNodes/: Main.cpp
Tests/Shared/: LimitedTestNode.cpp  LimitedTestNode.hpp  SyncedTestNode.cpp  SyncedTestNode.hpp  TestApplication.cpp  TestApplication.hpp  VirtualMem.cpp  VirtualMem.hpp
Tests/ShellCommands/: Main.cpp
Tests/Terminal/: Main.cpp  MockTerminal.cpp  MockTerminal.hpp
Tests/Time/: Main.cpp
Tests/Vfs/: Main.cpp
Tests/VfsFailures/: Main.cpp
Toolchains/: arm-none-eabi.cmake
